--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 
 <body>
 <main>
-<h1>GitHub Pages のサンプルです</h1>
-
-<a href="http://www.tam-tam.co.jp/tipsnote/" class="btn"><button>TipsNote に戻る</button></a>
-
+  <h1>GitHub Pages のサンプルです</h1>
+  <a href="http://www.tam-tam.co.jp/tipsnote/"><button>TipsNote に戻る</button></a>
 </main>
+
 <script>
 console.log('GitHub Pages Sample');
 </script>
